# fast-api

./: pyproject.toml
src/fast_api/: index.html  main.py
