[project]
name = "fast-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "zeyadsleem", email = "zeyadsleem1@gmail.com" }]
dependencies = ["python-dotenv>=1.0.1", "fastapi>=0.115.6", "uvicorn>=0.34.0", "python-multipart>=0.0.20", "slowapi>=0.1.9"]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
_.env_file = ".env"
uvicorn = "uvicorn main:app --reload --app-dir ./src/fast_api"

[tool.pdm]
distribution = true

[dependency-groups]
style = ["black>=24.10.0"]
